fixed CSS overflow: hidden breaking profile hover box

--- a/public/stylesheets/_users.scss
+++ b/public/stylesheets/_users.scss
@@ -23,7 +23,7 @@
 		
 		// makes sure name doesn't wrap
 		white-space: nowrap;
-		overflow: hidden;
+		//overflow: hidden; // nop, breaks the profile hover
 		
 		> .picture, > .title, > .compatibility {
 			display: inline-block;
